kubernetes/apps/media/qbitwebui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbitwebui
  namespace: media
spec:
  ports:
    - port: 3000
  selector:
    app: qbitwebui
