kubernetes/apps/media/qbitwebui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbitwebui
  namespace: media
spec:
  parentRefs:
    - name: prod
      namespace: gateway
  hostnames:
    - qbitwebui.local.elmurphy.com
  rules:
    - backendRefs:
        - name: qbitwebui
          port: 3000
